Fix spacing bug on wrapper

--- a/_sass/components/_scroll-form.scss
+++ b/_sass/components/_scroll-form.scss
@@ -4,7 +4,7 @@
 }
 
 .scroll-form__questionset {
-  transition: opacity 500ms 250ms ease-in-out;
+  transition: opacity 300ms 100ms $ease-in-out-quad;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -12,7 +12,7 @@
 }
 
 .scroll-form__questionset--active {
-  transition: opacity 500ms 250ms ease-in-out;
+  transition: opacity 300ms 100ms $ease-in-out-quad;
   opacity: 1;
 }
 
