--- a/_sass/mixins/_wrapper-padding.scss
+++ b/_sass/mixins/_wrapper-padding.scss
@@ -6,6 +6,6 @@
 
   @include media($desktop) {
     width: 100%;
-    min-width: $max-width;
+    max-width: $max-width;
   }
 }
